updated controllers and entities